# recursive_slm_lab

./: .gitignore  Dockerfile.verify  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts_real/: memory.sqlite
recursive_slm_lab/: __init__.py  cli.py  config.py  policy.py
recursive_slm_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recursive_slm_lab/eval/: __init__.py  evaluate.py  gating.py  metrics.py  plots.py  robust.py  strength.py
recursive_slm_lab/llm/: __init__.py  base.py  localhf.py  mock.py  openai_compat.py
recursive_slm_lab/loop/: __init__.py  iteration.py  prompts.py  reporting.py  sampling.py  scheduler.py  self_improve.py
recursive_slm_lab/memory/: __init__.py  consolidation.py  db.py  llm_consolidation.py  migrations.py  retrieval.py  schema.sql
recursive_slm_lab/meta/: __init__.py  curriculum.py  failure_mining.py  policy_improve.py
recursive_slm_lab/self_patch/: __init__.py  apply.py  gates.py  models.py  policy.py  propose.py  runner.py
recursive_slm_lab/tasks/: __init__.py  bundled_tasks.jsonl  dataset.py  generator.py  hidden_tasks.jsonl
scripts/: generate_tasks.py  run_demo.ps1  run_demo.sh  run_real_demo.ps1  run_real_demo.sh  smoke_demo.sh
tests/: test_adapter_state.py  test_cli_self_improve_log_level.py  test_connect_migrate_flag.py  test_curriculum_mining.py  test_db_multiprocess_fts_race.py  test_docker_sandbox.py  test_imports_no_cycle.py  test_iteration_results.py  test_localhf_adapter_switching.py  test_localhf_processing.py  test_manifest.py  test_migrations.py  test_policy_improve_json.py  test_policy_system.py  test_policy_validation.py  test_retrieval.py  test_rules_procedures.py  test_self_improve_backend_reuse.py  test_self_improve_smoke.py  test_smoke_pipeline.py  test_strength_probe.py  test_tasks_split.py
(+13 files in other folders)
