[project]
name = "recursive-slm-lab"
version = "0.1.0"
description = "Persistent memory + continuous learning demo with verification-gated recursion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "pydantic>=2.0",
  "rich>=13.0",
  "httpx>=0.24",
  "pytest>=7.0",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "packaging>=23.0",
]

[project.optional-dependencies]
localhf = [
  "torch",
  "transformers>=4.51.0",
  "accelerate",
  "peft",
]
train = [
  "datasets",
  "trl",
]

[project.scripts]
rslm = "recursive_slm_lab.cli:app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
recursive_slm_lab = ["tasks/bundled_tasks.jsonl", "memory/schema.sql"]
